# columnar

./: .gitignore
.github/workflows/: embedding_build_template.yml  pack_publish.yml  test.yml
embeddings/: .gitignore  Cargo.toml  Cross.toml  Cross.toml.debian  Cross.toml.rhel
embeddings/src/model/: local.rs
