[package]
name = "manticoresearch-text-embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "59b18d974ec3cad6963b774aa245e23f8c80414f" }
tokenizers = "0.15.2"
hf-hub = { git = "https://github.com/huggingface/hf-hub.git", rev = "ac22200ea0b5af4d8c362f699be0340647b19060", default-features = false,features = ["ureq"] }
anyhow = "1.0.81"
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "59b18d974ec3cad6963b774aa245e23f8c80414f" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "59b18d974ec3cad6963b774aa245e23f8c80414f" }
serde_json = "1.0.114"
serde = "1.0.197"
rand = "0.8.5"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1.10.0"

[build-dependencies]
cbindgen = "0.26.0"

[dev-dependencies]
approx = "0.5.1"

# Example of customizing the library in Cargo.toml.
[lib]
name = "manticoresearch_text_embeddings"
crate-type = ["dylib"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = "debuginfo"

[profile.release.target.'cfg(target_arch = "aarch64-apple-darwin")']
strip-command = "aarch64-apple-darwin22.4-strip-apple-darwin22.4-strip"

[profile.release.target.'cfg(target_arch = "x86_64-apple-darwin")']
strip-command = "x86_64-apple-darwin22.4-strip"

[env]
RUSTFLAGS = "-C target-feature=+crt-static"

